:octocat: switch to PostgreSQL database due to poor performance of MySQL on large tables

--- a/config/.env_example
+++ b/config/.env_example
@@ -4,10 +4,10 @@ TWITTER_SECRET=
 TWITTER_CALLBACK_URL=
 
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=5432
 DB_SOCKET=
 DB_DATABASE=
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=
 DB_SSL_CA=
 DB_SSL_CAPATH=
